@@ -26,6 +26,7 @@ version <next>:
 - added threads option per filter instance
 - weave filter
 - gblur filter
+- avgblur filter
 
 
 version 3.1:
